feat(cards): Introduce PreviewCard for optimized board rendering
- Introduce `PreviewCard` and `LabelPreview` domain models for lightweight card display
- Implement `ListCardPreviewsUseCase` and update `CardRepository` to support preview-specific queries
- Update Android `BoardScreen` and `BoardViewModel` to use `PreviewCard`, leveraging built-in counts for comments, attachments, and checkboxes
- Migrate JavaFX `CardPreviewView`, `ColumnFeature`, and `CardPreviewCellFactory` to use `PreviewCard`
- Refactor JavaFX `CardPreviewActionListener` to pass `Card.ID` instead of full `Card` objects
- Implement mapping logic in `CardRepositoryImpl` to generate card excerpts and aggregate metadata counts

Co-authored-by: Gemini 3 Flash Preview
Signed-off-by: Stefan Niedermann <info@niedermann.it>